# simple-rts

./: .gitignore  cabal.project  default.nix  project.x  release.nix  run.sh  shell.nix  simple-rts.nix
ivory-memory/: README.md  ivory-memory.cabal
ivory-memory/src/Ivory/: Malloc.hs
ivory-nuklear/: README.md  ivory-nuklear.cabal  run.sh
ivory-nuklear/app/: Demo.hs
ivory-nuklear/cbits/: Makefile  main.c
ivory-nuklear/src/Ivory/: Nuklear.hs
ivory-nuklear/src/Ivory/Nuklear/: SDL.hs
ivory-sdl/: .gitignore  README.md  ivory-sdl.cabal  run-grumpy.sh
ivory-sdl/app/: Grumpy.hs
ivory-sdl/cbits/: Makefile
ivory-sdl/src/Ivory/: SDL.hs
ivory-string/: README.md  ivory-string.cabal
ivory-string/src/Ivory/: String.hs
project/: default.nix
project/expresso/: package.nix
simple-rts/: README.md  simple-rts.cabal
simple-rts/app/: Main.hs
simple-rts/cbits/: Makefile  main.c  main_bp.c
simple-rts/src/Game/Simple/: Rts.hs
