name:                simple-rts
version:             0.0.1.0
synopsis:            Implementation of simple 2 players network RTS game.
description:
  Implementation of simple 2 players network RTS game.
  .
  * Ivory based
  * 2D rendering
  * The simpliest mechanics
  * UDP based networking
  .
  See README.md
license:             MIT
license-file:        LICENSE
copyright:           2020 Anton Gushcha
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
category:            Data
build-type:          Simple
cabal-version:       1.24
extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/NCrashed/simple-rts

library
  hs-source-dirs:      src
  exposed-modules:
    Game.Simple.Rts
  build-depends:
      base            >= 4.5    && < 4.14
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleInstances
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
