name:                simple-rts
version:             0.0.1.0
synopsis:            Implementation of simple 2 players network RTS game.
description:
  Implementation of simple 2 players network RTS game.
  .
  * Ivory based
  * 2D rendering
  * The simpliest mechanics
  * UDP based networking
  .
  See README.md
license:             MIT
license-file:        LICENSE
copyright:           2020 Anton Gushcha
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
category:            Data
build-type:          Simple
cabal-version:       1.24
extra-source-files:
  README.md
  CHANGELOG.md
data-dir: cbits
data-files:
  main.c
  Makefile

source-repository head
  type: git
  location: https://github.com/NCrashed/simple-rts

library
  hs-source-dirs:      src
  exposed-modules:
    Game.Simple.Rts
  other-modules:
    Paths_simple_rts
  build-depends:
      base            >= 4.5      && < 4.14
    , ivory           >= 0.1.0.10 && < 0.2
    , ivory-sdl       >= 0.1      && < 0.2
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    DeriveGeneric
    FlexibleInstances
    GADTs
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeOperators

executable simple-rts
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Paths_simple_rts
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-A64m -with-rtsopts=-AL256m -with-rtsopts=-qn4
  build-depends:
      base
    , simple-rts
    , ivory-sdl
    , ivory-artifact  >= 0.1    && < 0.2
    , ivory-backend-c >= 0.1    && < 0.2
  default-language:    Haskell2010
